examples/standard/clusterip-gateway/clusterip-gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: cluster-ip
spec:
  controllerName: "networking.k8s.io/cluster-ip-controller"
